Pág 95 do livro de estatística básica

--- a/analise-bidimensional.ipynb
+++ b/analise-bidimensional.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "650889d6",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "2     Outra                   2             2         2     13"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "36dde650",
    "metadata": {
     "scrolled": true
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "c410272e",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "d32c2e58",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "ee63186b",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "Adm              55        25     80"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "7308f85e",
    "metadata": {
     "scrolled": true
@@ -347,7 +347,7 @@
        "Adm        0.392857  0.416667    0.4"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "eb2dc2a1",
    "metadata": {
     "scrolled": true
@@ -437,7 +437,7 @@
        "Ciências Sociais         40        40     80"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "a4bca4d7",
    "metadata": {
     "scrolled": true
@@ -526,7 +526,7 @@
        "Ciências Sociais   0.285714  0.666667    0.4"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "025ff6a6",
    "metadata": {},
    "outputs": [],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "6e0fa184",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "Rio G. do Sul         111       304     139      48"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "id": "fbf14234",
    "metadata": {
     "scrolled": false
@@ -739,7 +739,7 @@
        "Rio G. do Sul    0.184385  0.504983  0.230897  0.079734"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "id": "0acbd3e4",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "4   3895               187"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "id": "9ef95e60",
    "metadata": {
     "scrolled": true
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "id": "ca072782",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "-0.009099791805313718"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "id": "265405f5",
    "metadata": {
     "scrolled": true
@@ -1024,7 +1024,7 @@
        "4          83       100"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "id": "13f955a8",
    "metadata": {},
    "outputs": [
@@ -1084,52 +1084,143 @@
   },
   {
    "cell_type": "markdown",
-   "id": "807685e8",
+   "id": "29ae0f59",
    "metadata": {},
    "source": [
-    " Vimos que o indice de correlação é menor que 0.5, mostrandos que temos uma baixa associação linear. Nesse caso, é necessário fazer a correção de escala e mudança de origem para obter uma medida de associação mais confiável."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "3c4044bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correlação (X, Y): 0.31\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Mudança da origem para o centro dispersão\n",
-    "x_mean = np.mean(x)\n",
-    "y_mean = np.mean(y)\n",
-    "\n",
-    "x_centered = [point - x_mean for point in x]\n",
-    "y_centered = [point - y_mean for point in y]\n",
-    "\n",
-    "# Correção da escala\n",
-    "x_std = np.std(x_centered)\n",
-    "y_std = np.std(y_centered)\n",
-    "x_scaled = [point / x_std for point in x_centered]\n",
-    "y_scaled = [point / y_std for point in y_centered]\n",
-    "\n",
-    "# Cálculo da correlação\n",
-    "correlation = np.mean(np.multiply(x_scaled, y_scaled))\n",
-    "\n",
-    "print(\"Correlação (X, Y):\", round(correlation,2))"
+    "# Associação entre Variáveis Qualitativas e Quantitativas"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1dabe6e7",
+   "id": "4178ca13",
    "metadata": {},
    "source": [
-    "Mesmo com a correção os valor da correlação se manteve baixo. Mostrando que de fato há uma correlação fraca entre as duas variáveis."
+    "O R-squared (R²) é uma medida estatística que quantifica o grau de dependência entre duas variáveis. Quando o R² é igual a 1, significa que a variável qualitativa explica totalmente a variação da variável quantitativa, ou seja, há uma associação perfeita entre elas. Se o R² é igual a 0, indica que a variável qualitativa não explica a variação da variável quantitativa, ou seja, não há associação entre elas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0e8fa963",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Metros Quadrados</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1235</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6192</td>\n",
+       "      <td>146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1905</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8813</td>\n",
+       "      <td>191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3895</td>\n",
+       "      <td>187</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Renda  Metros Quadrados\n",
+       "0   1235               118\n",
+       "1   6192               146\n",
+       "2   1905               136\n",
+       "3   8813               191\n",
+       "4   3895               187"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Exemplos dos metros quadrados\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c31fa60d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.008280621089984397"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "#Exemplo dos metros quadrados \n",
+    "x = np.array(df['Metros Quadrados'])\n",
+    "y = np.array(df['Renda'])\n",
+    "\n",
+    "X = x.reshape(-1, 1)\n",
+    "\n",
+    "# Criar uma instância do modelo de regressão linear\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Ajustar o modelo aos dados\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "# Calcular o R²\n",
+    "r_squared = model.score(X, y)\n",
+    "r_squared*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60f79b5c",
+   "metadata": {},
+   "source": [
+    "Temos que então que os metros quadradoss tem uma explicação muito baixa para a variação da renda."
    ]
   }
  ],
